syntax = "proto3";

package qpaxos;

import "command.proto";

message InstanceId {
    int64 replica_id = 1;
    int64 idx = 2;
};

// Dep describes relations between a depending instance and the instances
// proposed by another leader.
message Dep {

    // Same as InstanceId.
    int64 replica_id = 1;
    int64 idx = 2;

    // The seq of the dependent instance. This attr is used to determine if a
    // depending instance has seen the committed value of a dependency.
    int64 seq = 3;
}

message Deps {
    repeated Dep dep_vec = 1;
}

message InstanceIdVec {
    repeated InstanceId ids = 1;
}

// BallotNum is the same concept as in paxos, except:
// The last seen ballot number is tracked by a replica, thus all instance shares
// the same last-seen ballot.
// TODO: replica: add last_seen_ballot.
//
// And every instance tracks the vballot(paxos concept), which is the ballot
// number at which the value of instance is Accept-ed.
// TODO: remove `ballot` from Instance.
//
// A ballot number protects both the instance and the relation between other
// instances. E.g., When Prepare with `a` on a replica, if an interfering
// instance `b` is Prepared with a higher ballot number, then the leader of `a`
// should receive the higher ballot and re-Prepare if it needs to send Accept
// with `a`.
//
// NOTE:
// FastCommit does not need to stop if leader saw a higher ballot, because
// FastCommit-ed value is not recovered by ballot of the value(as in classis
// paxos), but instead by the count of a value.
message BallotNum {
    int32 num = 1;
    int64 replica_id = 2;
};

// Instance is the internal representation of a client request.
message Instance {

    BallotNum ballot       = 12;
    InstanceId instance_id = 13;
    repeated Command cmds  = 21;

    // deps is the instance ids on a replica when handling PreAccept
    // request.
    Deps deps                        = 32;

    // An instance has several status.
    // To determine the instance status:
    //
    // - is-accepted:     if Instance.vballot is not None
    // - is-committed:    if Instance.committed
    // - is-executed:     if Instance.executed

    bool      committed              = 51;
    bool      executed               = 52;

    // The ballot at which this instance is Accept-ed.
    // epaxos has a bug that it does not track the ballot when an instance is
    // accepted.
    BallotNum vballot        = 53;

};
